fix overflowing image again!

--- a/css/modules/garden-two.css
+++ b/css/modules/garden-two.css
@@ -19,7 +19,7 @@ restaurant-card address {
 }
 
 restaurant-card picture {
-  max-width: 25%;
+  /*max-width: 25%;*/
 }
 
 .restaurant-name {
@@ -107,6 +107,7 @@ adriana-lima em {
   }
   .restaurant-list {
     flex-wrap: nowrap;
+    gap: 2%;
   }
   .restaurant-list li {
     margin-top: unset;
